# clawform

./: .gitignore  Cargo.toml  README.md  claude-search-trace.md  install.sh  justfile  program.md  prompt_example_no_last_session.md  skill-missing-trace.md  skill-self-test.md
.githooks/: pre-commit
.github/workflows/: release.yml
calculator-app/: Package.swift
calculator-app/Sources/CalculatorApp/: CalculatorApp.swift  CalculatorView.swift  CalculatorViewModel.swift
contrib/: ARCHITECTURE.md  DEVELOPMENT.md
crates/claudeform-cli/: Cargo.toml
crates/claudeform-cli/src/: lib.rs  main.rs
crates/claudeform-cli/tests/: codex_e2e.rs
crates/claudeform-core/: Cargo.toml
crates/claudeform-core/src/: apply.rs  config.rs  fingerprint.rs  history.rs  lib.rs  path_utils.rs  program.rs  provider.rs
crates/claudeform-core/tests/: apply_mock.rs
crates/clawform-cli/: Cargo.toml
crates/clawform-cli/src/: lib.rs
crates/clawform-cli/tests/: claude_e2e.rs  codex_e2e.rs
crates/clawform-core/: Cargo.toml
crates/clawform-core/src/: apply.rs  config.rs  history.rs  lib.rs  program.rs  provider.rs
crates/clawform-core/tests/: apply_mock.rs
examples/: calc.md  k8s.md  sandbox-check.md  smoke.md
test_data/: runtime_prompt_first_session.md  runtime_prompt_with_last_session.md
