[workspace]
members = [
  "crates/clawform-core",
  "crates/clawform-cli",
]
resolver = "2"

[workspace.package]
version = "0.0.8"
edition = "2021"
license = "MIT"
authors = ["Clawform Contributors"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
similar = "2.7"
tempfile = "3.12"
thiserror = "2.0"
