[package]
name = "clawform"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
default-run = "clawform"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
clawform-core = { path = "../clawform-core" }

[dev-dependencies]
anyhow.workspace = true
tempfile.workspace = true
serial_test = "3.2"
