[package]
name = "clawform-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
ctrlc.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
similar.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
tempfile.workspace = true
